GROOVY-10107, GROOVY-10220, GROOVY-10235, GROOVY-10256